Add new widget 'Security Events Graph'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -444,6 +444,12 @@
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsAppsSDKTopsReports.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsMobileTopsEditConfig.controller.js"></script>
 <!-- //Apps Analytic -->
+<!-- Security Analytics-->
+<script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/widgetSecurityAnalytics.module.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/widgetsWAFAnalyticsEditConfig.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/waf-security-events-chart/widgetWAFSecurityEventsChart.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/waf-security-events-chart/widgetWAFSecurityEventsChart.controller.js"></script>
+<!-- //Security Analytics-->
 <!-- Web Analytic -->
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalyticsEditConfig.controller.js"></script>
