Add new directive 'dns-queries-line-chart'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -500,6 +500,7 @@
 <!-- DNS Analytics-->
 <script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.routes.js"></script>
+<script type="text/javascript" src="js/portal/dns_analytics/dns-queries-line-chart/dnsQueriesLineChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/dns_analytics/controllers/DNSAnalytics.controller.js"></script>
 <!-- //DNS Analytics-->
 <!-- Azure Marcetplace-->
