Add new widget 'DNS Queries Graph' and new widget group 'DNS Analytics'

--- a/code/dev/parts/dashboard/widgets/widget-add.html
+++ b/code/dev/parts/dashboard/widgets/widget-add.html
@@ -31,6 +31,19 @@
           <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
         </dl>
       </div>
+      <div uib-accordion-group is-open="accordionState.isDNSAnalyticsHeaderOpen">
+        <uib-accordion-heading>
+          <span class="widget-group-title h5">DNS Analytics
+          <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': accordionState.isDNSAnalyticsHeaderOpen, 'glyphicon-chevron-right': !accordionState.isDNSAnalyticsHeaderOpen}"></i>
+          </span>
+        </uib-accordion-heading>
+        <dl class="dl-horizontal">
+          <dt ng-repeat-start="(key, widget) in widgets | orderWidgets: 'dns' ">
+            <a href="" ng-click="addWidget(key)">{{::widget.title}}</a>
+          </dt>
+          <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
+        </dl>
+      </div>
       <div uib-accordion-group is-open="accordionState.isBusinessHeaderOpen">
         <uib-accordion-heading>
           <span class="widget-group-title h5">Business Analytics
