--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -444,6 +444,12 @@
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsAppsSDKTopsReports.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsMobileTopsEditConfig.controller.js"></script>
 <!-- //Apps Analytic -->
+<!-- DNS Analytics-->
+<script type="text/javascript" src="js/portal/dashboard/widgets/dns-analytics/widgetsDNSAnalytics.module.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/dns-analytics/widgetsDNSAnalyticsDefault.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/dns-analytics/widgetsDNSAnalyticsEditConfig.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/dns-analytics/dns-queries-line-chart/wingetDNSQueriesLineChart.config.js"></script>
+<!-- //DNS Analytics -->
 <!-- Security Analytics-->
 <script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/widgetSecurityAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/security-analytics/widgetsWAFAnalyticsEditConfig.controller.js"></script>
