Update widgets for Dashboard

--- a/code/dev/parts/dashboard/widgets/dns-analytics/widget-title-with-params-zone.tpl.html
+++ b/code/dev/parts/dashboard/widgets/dns-analytics/widget-title-with-params-zone.tpl.html
@@ -22,5 +22,5 @@
         </a>
        </span>
 </h3>
-<small ng-if="!!definition.config.filters.period && definition.config.filters.period!=='-'">&nbsp;Period: {{definition.config.info.period}}&nbsp;</small>
+<small ng-if="!!definition.config.filters.period && definition.config.filters.period!=='-'">Period: {{definition.config.info.period}}&nbsp;</small>
 <span>
