--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -1,4 +1,4 @@
-<h3 style="margin-top: 0;">Average FBT</h3>
+<h3 style="margin-top: 0;"class="title-chart">Average FBT</h3>
 <div class="clearfix"  ng-show="flOs && flCountry && flDevice">
   <div class="pull-right">
 
