--- a/code/dev/parts/dns_analytics/dns-queries-line-chart/dns-queries-line-chart.tpl.html
+++ b/code/dev/parts/dns_analytics/dns-queries-line-chart/dns-queries-line-chart.tpl.html
@@ -1,4 +1,4 @@
-<label class="title h4">{{heading}}</label>
+<label class="title title-chart h4">{{heading}}</label>
 <div class="panel-body">
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="dnsZoneData" ng-chart-options="chartOptions"></div>
 </div>
