Add Auto-Discover Zone Records

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -491,6 +491,8 @@
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.routes.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/controller/dns_zone_recordsCrud.controller.js"></script>
+<script type="text/javascript" src="js/portal/dns_zone_records/controller/dnsZoneAutoDiscoverZoneRecordsModal.controller.js"></script>
+<script type="text/javascript" src="js/portal/dns_zone_records/checklist-dns-zone-records/checklistDnsZoneRecords.directive.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/dns-zone-record-answer/dnsZoneRecordAnswer.directive.js"></script>
 
 <!-- //DNS Zone Records -->
