Fix font and positions for verification messages

--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -21,21 +21,21 @@
         <div class="verify--steps" ng-switch="steps">
           <div class="row" ng-switch-when="verify-token">
             <div class="col-md-12">
-              <div class="pull-left">
+              <div class="text text-center lead">
                 <p class="h3">Verifying the token....</p>
               </div>
             </div>
           </div>
           <div class="row" ng-switch-when="verify-token-success">
             <div class="col-md-12">
-              <div class="pull-left">
-                <div class="h1">Thank you for verifying your email address!</div>
+              <div class="lead text text-center">
+                <div class="h3">Thank you for verifying your email address!</div>
               </div>
             </div>
           </div>
           <div class="row" ng-switch-when="verify-token-success">
             <div class="col-md-12">
-              <p class="lead col-sm-offset-2 col-sm-8">
+              <p class="lead text text-center">
                 In a few seconds you will be automatically redirected to our Customer Portal.
               </p>
             </div>
