Update tooltip for the "Password" field

--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -180,7 +180,7 @@
                     <span id="spnPassword" class="add-on input-group-addon" style="cursor:pointer;" ng-click="isShowPassw= !isShowPassw" popover-trigger="mouseenter" uib-popover="Click to show/hide the password">
                    <i id="icnPassword" class="glyphicon" ng-class="isShowPassw?'glyphicon-eye-open':'glyphicon-eye-close'"></i></span>
                     <input type="{{isShowPassw?'text':'password'}}" class="form-control inline-block" id="destination_password" name="destinationPassword" placeholder="Password" ng-model="model.destination_password" ng-maxlength="150" ng-disabled="_loading" ng-required="model.destination_type ==='sftp' ||model.destination_type ==='ftp'">
-                    <label for="destinationPassword" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Password for FTP and SFTP destination types" style="padding-left: 4px;">
+                    <label for="destinationPassword" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Password for FTP and SFTP destination types, Amazon Secret Access Key for S3 destination type" style="padding-left: 4px;">
                       <i class="fa fa-question-circle"></i>
                     </label>
                   </div>
