--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -164,7 +164,7 @@
               <div class="form-group" ng-class="{ 'has-error': editForm.destinationUsername.$invalid && editForm.destinationUsername.$dirty }">
                 <label for="destinationUsername" class="col-sm-2 control-label">Username<span ng-if="model.destination_type ==='sftp' ||model.destination_type ==='ftp'"> *</span></label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control inline-block" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading" ng-required="model.destination_type ==='sftp' ||model.destination_type ==='ftp'">
+                  <input type="text" class="form-control inline-block" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading" ng-required="model.destination_type ==='sftp' ||model.destination_type ==='ftp'" autocomplete="nope">
                   <label for="destinationUsername" class="text text-info" popover-trigger="mouseenter" uib-popover="Username for FTP and SFTP destination types">
                     <i class="fa fa-question-circle"></i>
                   </label>
@@ -179,7 +179,7 @@
                   <div class="input-group">
                     <span id="spnPassword" class="add-on input-group-addon" style="cursor:pointer;" ng-click="isShowPassw= !isShowPassw" popover-trigger="mouseenter" uib-popover="Click to show/hide the password">
                    <i id="icnPassword" class="glyphicon" ng-class="isShowPassw?'glyphicon-eye-open':'glyphicon-eye-close'"></i></span>
-                    <input type="{{isShowPassw?'text':'password'}}" class="form-control inline-block" id="destination_password" name="destinationPassword" placeholder="Password" ng-model="model.destination_password" ng-maxlength="150" ng-disabled="_loading" ng-required="model.destination_type ==='sftp' ||model.destination_type ==='ftp'|| model.destination_type ==='s3'">
+                    <input type="{{isShowPassw?'text':'password'}}" class="form-control inline-block" id="destination_password" name="destinationPassword" placeholder="Password" ng-model="model.destination_password" ng-maxlength="150" ng-disabled="_loading" ng-required="model.destination_type ==='sftp' ||model.destination_type ==='ftp'|| model.destination_type ==='s3'" autocomplete="nope">
                     <label for="destinationPassword" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Password for FTP and SFTP destination types, Amazon Secret Access Key for S3 destination type" style="padding-left: 4px;">
                       <i class="fa fa-question-circle"></i>
                     </label>
