--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -85,13 +85,14 @@
               <span ng-show="model.source_type=='app'">Application</span> *
             </label>
             <div class="col-sm-10">
-              <ui-select ng-model="selectedDomainSourceId" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onDomainSelect($model)" style="min-width: 550px;" ng-if="model.source_type=='domain'" required>
+              <div style="min-width: 550px;" class="inline-block" ng-if="!model.source_type || (model.source_type=='domain'&&!domainsList) || (model.source_type=='app'&&!appsList)"><label class="control-label"><i class="text text-info glyphicon glyphicon-refresh spin"></i>&nbsp;Loading...</label></div>
+              <ui-select ng-model="selectedDomainSourceId" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onDomainSelect($model)" style="min-width: 550px;" ng-if="model.source_type=='domain'&& !_loading&&!!domainsList" required>
                 <ui-select-match placeholder="Select Domain">{{$select.selected.domain_name}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in domainsList | filter: {domain_name: $select.search,account_id:model.account_id}">
                   <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <ui-select ng-model="selectedAppSourceId" class="source-select" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onAppSelect($model)" style="min-width: 550px;" ng-if="(model.source_type=='app')" required>
+              <ui-select ng-model="selectedAppSourceId" class="source-select" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onAppSelect($model)" style="min-width: 550px;" ng-if="(model.source_type=='app'&&!_loading&&!!appsList)" required>
                 <ui-select-match placeholder="Select Application">{{$select.selected.app_name}} <i>({{$select.selected.app_platform.replace('_',' ')}})</i></ui-select-match>
                 <ui-select-choices repeat="item.id as item in appsList | filter: {app_name: $select.search,account_id:model.account_id }">
                   <div ng-bind-html="item.app_name + '<i> ('+item.app_platform.replace('_',' ')+')</i>'|highlight: $select.search"></div>
