Add new Page - 'CDN IP Blocks'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -487,6 +487,11 @@
 <script type="text/javascript" src="js/portal/logshippers/controller/logshippers.controller.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/logshippers-staging-status/logshippersStagingStatus.directive.js"></script>
 <!-- // LogShippers -->
+<!-- Network IP Blocks-->
+<script type="text/javascript" src="js/portal/network-ip-blocks/networkIPBlocks.module.js"></script>
+<script type="text/javascript" src="js/portal/network-ip-blocks/networkIPBlocks.routes.js"></script>
+<script type="text/javascript" src="js/portal/network-ip-blocks/controllers/cdnIPBlocks.controller.js"></script>
+<!-- // Network IP Blocks-->
 <!-- DNS Zone Records -->
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.routes.js"></script>
