--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -181,6 +181,9 @@
           <a ui-sref-active="active" ui-sref="index.accountSettings.2fa" class="side-menu-sub-item" href="#/2fa">
             <i class="sub-menu-icon fa fa-lock"></i> Security Settings
           </a>
+          <a ui-sref-active="active" ui-sref="index.accountSettings.cdn-ip-blocks" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-server "></i>  CDN IP Blocks
+          </a>
           <a ui-sref-active="active" ui-sref="index.accountSettings.activitylog" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-tasks"></i> Activity Log
           </a>
