Update Job Automatically Generate WAF Rules

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -530,8 +530,10 @@
 <!-- WAF Rules -->
 <script type="text/javascript" src="js/portal/waf_rules/waf_rules.module.js"></script>
 <script type="text/javascript" src="js/portal/waf_rules/waf_rules.routes.js"></script>
+<script type="text/javascript" src="js/portal/waf_rules/controller/wafRulesAutoGenerateRulesModal.controller.js"></script>
 <script type="text/javascript" src="js/portal/waf_rules/controller/wafRulesCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/waf_rules/controller/wafRulesBuiltInList.controller.js"></script>
+<script type="text/javascript" src="js/portal/waf_rules/directives/wafRuleGenerationJobTimePeriod.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf_rules/waf-rule-staging-status/wafRuleStagingStatus.directive.js"></script>
 <!-- //WAF Rules -->
 <!-- WAF Analytics -->
