--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -49,7 +49,7 @@
         <div class="col-sm-12">
           <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.newRuleName" name="rule_name"
             id="rule_name" placeholder="New WAF Rule Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="50" required>
-            <label for="rule_name" class="text-info" popover-append-to-body="{{false}}" popover-trigger="mouseenter" uib-popover="WAF Rule name (50 characters max)">
+          <label for="rule_name" class="text-info" popover-append-to-body="{{false}}" popover-trigger="mouseenter" uib-popover="WAF Rule name (50 characters max)">
               <i class="fa fa-question-circle"></i>
             </label>
           <div class="error-messages" ng-messages="duplicateForm.rule_name.$error" role="alert" ng-messages-multiple>
@@ -80,17 +80,25 @@
             <div class="col-md-12">
               <div class="pull-left form-inline">
                 <div class="form-group">
-                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" id="btn_add_new_waf_rule" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()"
-                    popover-append-to-body="{{false}}" popover-trigger="mouseenter" uib-popover="Click to add a new WAF rule. Later the rule can be used in WAF settings of your web domains.">
+                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" id="btn_add_new_waf_rule" ng-class="{'btn-disabled':isReadOnly()}"
+                    ng-disabled="_loading || isReadOnly()" popover-append-to-body="{{false}}" popover-trigger="mouseenter"
+                    uib-popover="Click to add a new WAF rule. Later the rule can be used in WAF settings of your web domains.">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New WAF Rule
                   </a>
                 </div>
                 <div class="form-group">
-                  <!-- TODO: -->
-                  <a uisref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly() || true"
-                    popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The system can automatically create white-listing WAF rules using real end user traffic of a website. WAF learning mode can be enabled using “Learning Mode” switch in WAF tab of your website configuration.">
+                  <button class="btn btn-success" ng-disabled="_loading" ng-click="onClickRefresh()">
+                    <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
+                    </dutton>
+                </div>
+                <div class="form-group hidden-xs">
+                  <div class="col-xs-12"></div>
+                </div>
+                <div class="form-group">
+                <button ng-click="onCreateWhiteListingWAFRules()" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()"
+                  popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The system can automatically create white-listing WAF rules using real end user traffic of a website. WAF learning mode can be enabled using “Learning Mode” switch in WAF tab of your website configuration.">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Learn From The Logs And Add Auto-Generated Rule
-                  </a>
+                  </button>
                 </div>
               </div>
 
