--- a/code/dev/parts/waf_rules/edit.html
+++ b/code/dev/parts/waf_rules/edit.html
@@ -25,7 +25,7 @@
             <label for="rule_name" class="col-sm-2 control-label">Rule Name *</label>
             <div class="col-sm-10">
               <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_name" name="rule_name"
-                id="rule_name" placeholder="WAF Rule Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="50" required>
+                id="rule_name" placeholder="WAF Rule Name" ng-pattern="WAF_RULE_NAME" ng-maxlength="150" required>
               <label for="rule_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="WAF Rule name (50 characters max)">
                 <i class="fa fa-question-circle"></i>
               </label>
