Update RegEx for allow new symbols

--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -36,7 +36,7 @@
                      name="companyName"
                      ng-maxlength="150"
                      id="name"
-                     ng-pattern="NO_SPECIAL_CHARS"
+                     ng-pattern="COMPANY_NAME"
                      placeholder="Company Name" required>
               <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Company Name TODO REVIEW TEXT">
                 <i class="fa fa-question-circle"></i>
