--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -36,7 +36,7 @@
           <div class="form-group" ng-class="{'has-error': createForm.firstName.$invalid && createForm.firstName.$dirty}">
             <label for="firstname" class="col-sm-2 control-label">First Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control inline-block" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="CONTACT_DATA" required>
+              <input type="text" class="form-control inline-block" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="USER_FIRST_NAME" required>
               <label for="firstname" class="text text-info" popover-trigger="mouseenter" uib-popover="First name">
                 <i class="fa fa-question-circle"></i>
               </label>
@@ -48,7 +48,7 @@
           <div class="form-group" ng-class="{'has-error': createForm.lastName.$invalid && createForm.lastName.$dirty}">
             <label for="lastName" class="col-sm-2 control-label">Last Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control inline-block" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="CONTACT_DATA" required>
+              <input type="text" class="form-control inline-block" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="USER_LAST_NAME" required>
               <label for="lastName" class="text text-info" popover-trigger="mouseenter" uib-popover="Last name">
                 <i class="fa fa-question-circle"></i>
               </label>
